--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id="app"></div>
-  <script src='https://unpkg.com/trianglify@^4/dist/trianglify.bundle.js'></script>
+  <script src='https://unpkg.2333332.xyz/trianglify@^4/dist/trianglify.bundle.js'></script>
   <script>
     const pattern = trianglify({
       width: window.innerWidth,
